--- a/content/styles/style.css
+++ b/content/styles/style.css
@@ -27,11 +27,13 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
     width:510px;
-    background-color: #c5b800;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    color:#fff;
+    background-color:  #003366;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: 0px 3px 2px 0px darkgrey;
     margin-left: 60px;
     margin-top: 10px;
 }
